# 2021_a_computer_vision_platform_to_support_classical_warehouse_logistics

./: README.md
backend/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  docker-compose.development.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  pyproject.toml  startup.sh
backend/app/: api.py  config.py  dependencies.py  helpers.py  main.py  static.py
backend/app/admin/: sqlalchemy_admin.py
backend/app/controllers/: auth_controller.py  image_controller.py  point_cloud_controller.py  room_controller.py
backend/app/db/: database.py  domains.py  models.py
backend/app/db/crud/: base.py  image_crud.py  point_cloud.py  room.py  user.py
backend/app/point_cloud/LocalScripts/: camera_converter.py  cloud_tools.py  main.py  matrix_tools.py
backend/app/schemas/: base.py  event.py  image.py  point_cloud.py  room.py  stream.py  user.py  video.py
backend/app/services/: auth_service.py  image_service.py  point_cloud_service.py  room_service.py  sync_auth_service.py
backend/app/tasks/: celery.py
backend/migrations/: env.py
backend/migrations/versions/: 2022_06_27_1238-a7a1b8429fba_initial.py  2022_07_10_1758-6afc560531e4_point_cloud_fields.py  2022_07_12_1154-3f7377751ab6_fk_cascade.py  2022_07_12_1159-af76ec3bad4b_point_cloud_remove_log.py  2022_07_13_1851-599eb611447a_created_by.py  2022_07_19_1632-c2632bfd3db1_event_stream_video.py
frontend/: .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .prettierignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  nginx.conf  (+3 more)
(+253 files in other folders)
